--- a/code/fstring.ipynb
+++ b/code/fstring.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from inspect import stack"
@@ -11,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +21,15 @@
     "    caller = stack()[1][0]\n",
     "    ns = caller.f_globals.copy()\n",
     "    ns.update(caller.f_locals)\n",
+    "    caller.f_locals['q'] = 6\n",
+    "    print(caller.f_locals)\n",
     "    ns.update(kwargs)\n",
     "    return s.format(**ns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -50,21 +54,24 @@
     "    bob = Animal\n",
     "    s = fstring('His name is {bob.name}, {x:06x}, {y}, {z}', z=9)\n",
     "    print(s)\n",
-    "    t = [fstring('{i} {x} {y} {z}', z=11) for i in range(4)]\n",
-    "    print(t)"
+    "    \n",
+    "    # The following does not work in Python 3.0 because the\n",
+    "    # list comprehension runs with its own local namespace.\n",
+    "    #t = [fstring('{i} {x} {y} {z}', z=11) for i in range(4)]\n",
+    "    #print(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "His name is bob, 000005, 7, 9\n",
-      "['0 5 7 11', '1 5 7 11', '2 5 7 11', '3 5 7 11']\n"
+      "{'bob': <class '__main__.Animal'>, 'x': 5, 'q': 6}\n",
+      "His name is bob, 000005, 7, 9\n"
      ]
     }
    ],
@@ -74,16 +81,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'i': 0, '.0': <range_iterator object at 0x7ffb2c5da750>}\n",
+      "{'i': 1, '.0': <range_iterator object at 0x7ffb2c5da750>}\n",
+      "{'i': 2, '.0': <range_iterator object at 0x7ffb2c5da750>}\n",
+      "{'i': 3, '.0': <range_iterator object at 0x7ffb2c5da750>}\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "['0 4 7 11', '1 4 7 11', '2 4 7 11', '3 4 7 11']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +120,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,21 +141,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
